baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__optional_call_chain_continues.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: "render_tir(&db, file)"
---
class user.User {
  name: string
}
function user.f(callback: (() -> user.User throws never) | null) -> string | null throws never {
  { : string | null
    callback?.()?.name : string | null
  }
}
