baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__optional_field_access.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: "render_tir(&db, file)"
---
class user.User {
  name: string
}
function user.f(u: user.User | null) -> string | null throws never {
  { : string | null
    u?.name : string | null
  }
}
