baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__optional_field_access_through_optional_alias.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: "render_tir(&db, file)"
---
class user.User {
  name: string
}
type user.MaybeUser = user.User | null
function user.f(u: user.MaybeUser) -> string | null throws never {
  { : string | null
    u?.name : string | null
  }
  !! 89..96: did you mean `u.name`? `u?.name` is unnecessary, because `u` cannot be null
}
