baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__optional_index_through_optional_alias.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: "render_tir(&db, file)"
---
type user.MaybeInts = int[] | null
function user.f(xs: user.MaybeInts) -> int | null throws never {
  { : int | null
    xs?.[0] : int | null
  }
}
