baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__optional_param_default_forward_reference_checks_lambda_bodies.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: tir.as_str()
---
function user.lambda_capture_later_param(a: int = f(), b: int = 1) -> int throws never {
  { : int
    a : int
  }
  !! 46..78: default for parameter `a` cannot reference later parameter `b`
}
