baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__optional_params_accept_omission_and_named_override.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: tir
---
function user.search(query: string, max: int = 10) -> string throws never {
  { : string
    query : string
  }
}
function user.f() -> string throws never {
  { : never
    let a = search("cats") : string
    return search("dogs", max = 5) : string
  }
}
